[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dobot-writer"
version = "0.1.0"
description = "Multi-font text writer library for the Dobot Magician robotic arm"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Akash Kanagala", email = "kangalaakash11@gmail.com" }]
keywords = ["dobot", "robot", "arm", "writing", "pen-plotter", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
dependencies = ["pydobotplus>=0.1.0", "pyserial>=3.4,<3.5"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff", "mypy"]

[project.urls]
Homepage       = "https://github.com/armouredalpha/dobot-writer"
Documentation  = "https://github.com/armouredalpha/dobot-writer#readme"
Issues         = "https://github.com/armouredalpha/dobot-writer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dobot_writer*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
